# aluraBooksFastAPI

./: README.md
.github/workflows/: backend.yml
backend/: .env.sample  .gitignore  Makefile  docker-compose.yml  pyproject.toml
backend/api/: app.py  db.py  serializers.py  services.py
backend/api/routes/: __init__.py  favoritos.py  livros.py
backend/tests/: conftest.py  test_book.py  test_fav.py
frontend/: package-lock.json
frontend/src/: index.js
frontend/src/componentes/CardRecomenda/: index.js
frontend/src/componentes/Header/: index.js
frontend/src/componentes/IconesHeader/: index.js
frontend/src/componentes/Input/: index.js
frontend/src/componentes/Logo/: index.js
frontend/src/componentes/OpcoesHeader/: index.js
frontend/src/componentes/Pesquisa/: dadosPesquisa.js  index.js
frontend/src/componentes/Titulo/: index.js
frontend/src/componentes/UltimosLancamentos/: dadosUltimosLancamentos.js  index.js
frontend/src/rotas/: Favoritos.js  Home.js
frontend/src/servicos/: favoritos.js  livros.js
